failed attempt on JS request

--- a/src/main/resources/static/history.htm
+++ b/src/main/resources/static/history.htm
@@ -2,20 +2,26 @@
 <html>
 <body>
     <h1>Transaction History:</h1>
-    <table style="width:500px, text-align:left, padding:15px">
-        <tr style="background-color:grey">
-            <th>To</th>
-            <th>From</th>
-            <th>Amount</th>
-            <th>Date</th>
-        </tr>
-        <tr style="background-color:light-grey">
-            <td>Sender</td>
-            <td>Reciever</td>
-            <td>Money</td>
-            <td>At Some Point</td>
-        </tr>
-    </table>
+    <div id="table">
+        <table>
+            <tr style="background-color:grey">
+                <th>To</th>
+                <th>From</th>
+                <th>Amount</th>
+                <th>Date</th>
+                <th>Memo</th>
+            </tr>
+            <tr style="background-color:light-grey">
+                <td>Sender</td>
+                <td>Reciever</td>
+                <td>Money</td>
+                <td>At Some Point</td>
+                <td>Howdy Hey</td>
+            </tr>
+        </table>
+        <button type="button" onclick="loadText()">Change Content</button>
+    </div>
+    
     <br>
     <form action="overview.htm" method="post">
         <input type="submit" value="Back to Account Overview">
@@ -24,6 +30,19 @@
     <form action="login.htm" method="post">
         <input type="submit" value="Log Out">
     </form>
+
+    <script>
+        function loadText() {
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    document.getElementById("table").innerHTML = this.responseText;
+                }
+            };
+            xhttp.open("GET", "/historee", true);
+            xhttp.send;
+        }
+    </script>
 </body>
 </html>
 
