--- a/src/main/resources/static/overview.htm
+++ b/src/main/resources/static/overview.htm
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <h1>Account Overview:</h1>
-    <h2>Checking:</h2>
-    <h3>Balance: $1234</h3>
-    <p>Go to <a href="history.htm">Transaction History</a></p>
+    <body>
+        <h1>Account Overview:</h1>
+        <h2>Checking:</h2>
+        <h3>Balance: $1234</h3>
+        <p>Go to <a href="history.htm">Transaction History</a></p>
 
-    <h2>Savings:</h2>
-    <h3>Balance: $5678</h3>
-    <p>Go to <a href="history.htm">Transaction History</a></p>
+        <h2>Savings:</h2>
+        <h3>Balance: $5678</h3>
+        <p>Go to <a href="history.htm">Transaction History</a></p>
 
-    <form action="payment.htm" method="post">
-        <input type="submit" value="Make A Payment">
-    </form>
-    <br>
-    <form action="login.htm" method="post">
-        <input type="submit" value="Log Out">
-    </form>
-</body>
+        <form action="payment.htm">
+            <input type="submit" value="Make A Payment">
+        </form>
+        <br>
+        <button onclick="document.location='login.htm'">Log Out</button>
+    </body>
 </html>
 
 <!--- todo:
