--- a/src/main/resources/static/history.htm
+++ b/src/main/resources/static/history.htm
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <h1>Transaction History:</h1>
-    <div id="table">
-        <table>
-            <tr style="background-color:grey">
-                <th>To</th>
-                <th>From</th>
-                <th>Amount</th>
-                <th>Date</th>
-                <th>Memo</th>
-            </tr>
-            <tr style="background-color:light-grey">
-                <td>Sender</td>
-                <td>Reciever</td>
-                <td>Money</td>
-                <td>At Some Point</td>
-                <td>Howdy Hey</td>
-            </tr>
-        </table>
-        <button type="button" onclick="loadText()">Change Content</button>
-    </div>
-    
-    <br>
-    <form action="overview.htm" method="post">
-        <input type="submit" value="Back to Account Overview">
-    </form>
-    <br>
-    <form action="login.htm" method="post">
-        <input type="submit" value="Log Out">
-    </form>
-
-    <script>
-        function loadText() {
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    document.getElementById("table").innerHTML = this.responseText;
-                }
-            };
-            xhttp.open("GET", "/historee", true);
-            xhttp.send;
-        }
-    </script>
-</body>
+    <head>
+    </head>
+    <body>
+        <h1>Transaction History:</h1>
+        <div id="table">
+            <table>
+                <tr style="background-color:grey">
+                    <th>To</th>
+                    <th>From</th>
+                    <th>Amount</th>
+                    <th>Date</th>
+                    <th>Memo</th>
+                </tr>
+                <tr style="background-color:light-grey">
+                    <td>Sender</td>
+                    <td>Reciever</td>
+                    <td>Money</td>
+                    <td>At Some Point</td>
+                    <td>Meme-O</td>
+                </tr>
+            </table>
+            <br>
+            <p class="uname">The Username is </p>
+            <p class="fname">The First Name is </p>
+            <p class="lname">The Last Name is </p>
+            <button type="button" onclick="loadText()">Change Content</button>
+        </div>
+        
+        <br>
+        <button onclick="document.location='overview.htm'">Back to Account Overview</button>
+        <br>
+        <button onclick="document.location='login.htm'">Log Out</button>
+    </body>
 </html>
 
 <!--- todo:
