--- a/src/main/resources/static/payment.htm
+++ b/src/main/resources/static/payment.htm
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <h1>Make A Payment:</h1>
-    <form action="overview.htm">
-        <label for="account">Select an Account to Pay From:</label><br>
-        <input type="radio" id="checking" name="account" value="checking">
-        <label for="checking">Checking</label><br>
-        <input type="radio" id="savings" name="account" value="savings">
-        <label for="savings">Savings</label><br><br>
-        <label for="runame">Recipient's Username:</label><br>
-        <input type="text" id="runame" name="runame"><br>
-        <label for="amount">Amount:</label><br>
-        <input type="text" id="amount" name="amount"><br><br>
-        <input type="submit" value="Confirm Transaction">
-    </form>
-    <br>
-    <form action="overview.htm" method="post">
-        <input type="submit" value="Back to Account Overview">
-    </form>
-    <br>
-    <form action="login.htm" method="post">
-        <input type="submit" value="Log Out">
-    </form>
-</body>
+    <body>
+        <h1>Make A Payment:</h1>
+        <form action="overview.htm">
+            <label for="account">Select an Account to Pay From:</label><br>
+            <input type="radio" id="checking" name="account" value="checking">
+            <label for="checking">Checking</label><br>
+            <input type="radio" id="savings" name="account" value="savings">
+            <label for="savings">Savings</label><br><br>
+            <label for="runame">Recipient's Username:</label><br>
+            <input type="text" id="runame" name="runame"><br>
+            <label for="amount">Amount:</label><br>
+            <input type="text" id="amount" name="amount"><br><br>
+            <input type="submit" value="Confirm Transaction">
+        </form>
+        <br>
+        <button onclick="document.location='overview.htm'">Back to Account Overview</button>
+        <br>
+        <button onclick="document.location='login.htm'">Log Out</button>
+    </body>
 </html>
 
 <!--- todo:
