--- a/src/main/resources/static/login.htm
+++ b/src/main/resources/static/login.htm
@@ -12,7 +12,7 @@
 
         <p id="output">aa</p>
 
-        <p id="signup">Sign Up schenannigans go <a href="signup.htm">Here.</a></p>
+        <p id="signup">New User? <a href="signup.htm">Sign Up</a></p>
 
         <script>
             function request() {
