changed directory to accomodate for cookies

--- a/src/main/resources/static/secure/overview.htm
+++ b/src/main/resources/static/secure/overview.htm
@@ -14,7 +14,7 @@
             <input type="submit" value="Make A Payment">
         </form>
         <br>
-        <button onclick="document.location='login.htm'">Log Out</button>
+        <button onclick="document.location='../login.htm'">Log Out</button>
     </body>
 </html>
 
