--- a/src/main/resources/static/secure/payment.htm
+++ b/src/main/resources/static/secure/payment.htm
@@ -17,7 +17,7 @@
         <br>
         <button onclick="document.location='overview.htm'">Back to Account Overview</button>
         <br>
-        <button onclick="document.location='login.htm'">Log Out</button>
+        <button onclick="document.location='../login.htm'">Log Out</button>
     </body>
 </html>
 
