--- a/src/main/resources/static/secure/history.htm
+++ b/src/main/resources/static/secure/history.htm
@@ -28,7 +28,7 @@
         <br>
         <button onclick="document.location='overview.htm'">Back to Account Overview</button>
         <br>
-        <button onclick="document.location='login.htm'">Log Out</button>
+        <button onclick="document.location='../login.htm'">Log Out</button>
 
         <script>
             function request() {
