added payment feature

--- a/src/main/resources/static/login.htm
+++ b/src/main/resources/static/login.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Log In:</h1>
-        <form action="controller/login" method="POST"> <!--- add post --->
+        <form action="controller/login2" method="POST"> <!--- add post --->
             <label for="uname">Username:</label><br>
             <input type="text" id="uname" name="uname"><br>
             <label for="password">Password:</label><br>
