--- a/src/main/resources/static/secure/payment.htm
+++ b/src/main/resources/static/secure/payment.htm
@@ -9,11 +9,16 @@
                 <option value="Savings">Savings</option>
             </select><br>
             <label for="runame">Recipient's Username:</label><br>
-            <input type="text" id="runame" name="runame"><br>
+            <input type="text" id="runame" name="runame" required><br>
             <label for="amount">Amount:</label><br>
-            <input type="number" id="amount" name="amount"><br>
+            <input type="number" id="amount" name="amount" required><br>
+            <label for="raccount">Select an Account to Pay To:</label><br>
+            <select name="raccount" id="raccount">
+                <option value="Checking">Checking</option>
+                <option value="Savings">Savings</option>
+            </select><br>
             <label for="memo">Memo:</label>
-            <input type="text" id="memo" name="memo"><br><br>
+            <input type="text" id="memo" name="memo" required><br><br>
             <input type="submit" value="Confirm Transaction">
         </form>
         <br>
