--- a/src/main/resources/static/secure/overview.htm
+++ b/src/main/resources/static/secure/overview.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <body onload="request()">
         <h1>Account Overview:</h1>
         <h2>Checking:</h2>
-        <h3>Balance: $1234</h3>
+        <h3><div id="checking">Balance: </div></h3>
         <p>Go to <a href="history.htm">Transaction History</a></p>
 
         <h2>Savings:</h2>
-        <h3>Balance: $5678</h3>
+        <h3><div id="savings">Balance: </div></h3>
         <p>Go to <a href="history.htm">Transaction History</a></p>
 
         <form action="payment.htm">
@@ -15,6 +15,21 @@
         </form>
         <br>
         <button onclick="document.location='../login.htm'">Log Out</button>
+
+        <script>
+            function request() {
+                var myObj, xhttp = new XMLHttpRequest();
+                xhttp.onreadystatechange = function() {
+                    if (this.readyState == 4 && this.status == 200) {
+                        myObj = JSON.parse(this.responseText);
+                        document.getElementById("checking").innerHTML += "$" + myObj[0].balance;
+                        document.getElementById("savings").innerHTML += "$" + myObj[1].balance;
+                    }
+                };
+                xhttp.open("GET", "/controller/overview", true);
+                xhttp.send();
+            }
+        </script>
     </body>
 </html>
 
