--- a/src/main/resources/static/secure/payment.htm
+++ b/src/main/resources/static/secure/payment.htm
@@ -7,7 +7,7 @@
             <select name="account" id="account">
                 <option value="Checking">Checking</option>
                 <option value="Savings">Savings</option>
-            </select><br>
+            </select><br><br>
             <label for="runame">Recipient's Username:</label><br>
             <input type="text" id="runame" name="runame" required><br>
             <label for="amount">Amount:</label><br>
@@ -16,7 +16,7 @@
             <select name="raccount" id="raccount">
                 <option value="Checking">Checking</option>
                 <option value="Savings">Savings</option>
-            </select><br>
+            </select><br><br>
             <label for="memo">Memo:</label>
             <input type="text" id="memo" name="memo" required><br><br>
             <input type="submit" value="Confirm Transaction">
