--- a/src/main/resources/static/secure/payment.htm
+++ b/src/main/resources/static/secure/payment.htm
@@ -11,7 +11,7 @@
             <label for="runame">Recipient's Username:</label><br>
             <input type="text" id="runame" name="runame" required><br>
             <label for="amount">Amount:</label><br>
-            <input type="number" id="amount" name="amount" required><br>
+            <input type="text" id="amount" name="amount" required><br>
             <label for="raccount">Select an Account to Pay To:</label><br>
             <select name="raccount" id="raccount">
                 <option value="Checking">Checking</option>
