--- a/src/main/resources/static/login.htm
+++ b/src/main/resources/static/login.htm
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Log In:</h1>
-        <form name="login" class="form" action="controller/login" method="POST"> <!--- add post --->
+        <form name="login" class="form" action="controller/login" method="POST">
             <label for="uname">Username:</label><br>
             <input type="text" id="uname" name="uname" required maxlength="20"><br><br>
             <label for="password">Password:</label><br>
